# stori

./: .agentignore  .env.example  .gitignore  AGENTS.md  DEVELOPMENT_SUMMARY.md  DOCKER_SETUP.md  PRD.md  Plan.md  README.md  backend_agent.md  docker-compose.yml  frontend_agent.md  mock_expense_and_income.json
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  cleanup.yml  test.yml
backend/: .dockerignore  .env.example  CLEANUP_SUMMARY.md  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  SUPABASE_INTEGRATION.md  ai_test_server.py  analyze_user_data.py  auto_schema_setup.py  create_auth_users.py  final_verification.py  main.py  main_simple.py  mock_expense_and_income.json  pyproject.toml  requirements.txt  schema.sql  setup_database.py  setup_status.py  test_ai_real_data.py  test_auth.py  test_jwt_auth.py  test_models.py  verify_cleanup.py
backend/api/: __init__.py  ai_routes.py  mock_routes.py  routes.py  routes_old.py
backend/config/: __init__.py  settings.py
backend/core/: __init__.py  models.py
backend/data/: mock_users.json  user_1_transactions.json  user_2_transactions.json  user_3_transactions.json  user_4_transactions.json  user_5_transactions.json
backend/providers/: __init__.py  llms.py
backend/scripts/: README.md
backend/scripts/auth/: confirm_emails.py
backend/scripts/database/: check_database.py  sync_database_emails.py
backend/scripts/testing/: test_edge_cases.py
backend/services/: __init__.py  ai_advisor_service.py  ai_config_service.py  auth_middleware.py  mock_data_service.py  real_data_service.py  session_service.py  supabase_service.py
backend/src/: __init__.py
backend/src/modules/: IMPLEMENTATION_STATUS.md  __init__.py
backend/src/modules/ai/: controller.py  repository.py  schemas.py  service.py  test_ai.py
backend/src/modules/auth/: __init__.py  controller.py  schemas.py  service.py
backend/src/modules/expenses/: controller.py  repository.py  schemas.py  service.py  test_expenses.py
backend/src/modules/timeline/: controller.py  repository.py  schemas.py  service.py  test_timeline.py
backend/src/modules/transactions/: __init__.py  transactions_controller.py  transactions_repository.py  transactions_schemas.py  transactions_service.py  transactions_service_old.py  transactions_test.py
backend/tests/: conftest.py
backend/tests/modules/: __init__.py
backend/tests/modules/transactions/: __init__.py  test_transactions_service.py
frontend/: .env.example  Dockerfile  FRONTEND_STATUS.md  README.md  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
frontend/e2e/: ai-advisor.spec.ts  auth-error-handling.spec.ts  auth-test.spec.ts  auth.spec.ts  basic.spec.ts  dashboard.spec.ts  debug-basic.spec.ts  debug-login.spec.ts  essential-user-journey.spec.ts  jwt-token-test.spec.ts  real-auth-testing.spec.ts  signup-error-testing.spec.ts  transactions.spec.ts  user-1-complete-flow.spec.ts  user-1-complete-journey.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx  mode-toggle.tsx  theme-provider.tsx
frontend/src/components/ai/: AIChat.tsx
frontend/src/components/auth/: LoginForm.tsx
frontend/src/components/charts/: ExpenseChart.tsx  LazyCharts.tsx  TimelineChart.tsx
frontend/src/components/dashboard/: DashboardOverview.tsx  RecentTransactions.tsx
frontend/src/components/debug/: APIDataTest.tsx  MobileTestPage.tsx
frontend/src/components/layout/: DashboardLayout.tsx
frontend/src/components/router/: AppRouter.tsx  LazyAppRouter.tsx
frontend/src/components/transactions/: TransactionForm.tsx  TransactionList.tsx
frontend/src/components/ui/: announcement-region.tsx  badge.tsx  button.tsx  date-range-picker.tsx  loading-spinner.tsx
frontend/src/contexts/: auth-context.ts
frontend/src/hooks/: useAccessibility.ts  useApi.ts  useAuth.tsx  useDashboardRefresh.ts  useErrorHandler.ts  useNetworkStatus.ts  usePerformance.ts  useSmartDateRange.ts  useTheme.ts
frontend/src/hooks/__tests__/: dashboard-race-condition.test.ts  useSmartDateRange.test.tsx
frontend/src/lib/: api-client.ts  config.ts  queryClient.ts  supabase.ts  toast.ts
frontend/src/lib/__tests__/: utils.test.ts
frontend/src/lib/variants/: badge.ts  button.ts
frontend/src/pages/: AIChatPage.tsx
frontend/src/services/: api.ts
frontend/src/test/: setup.ts
frontend/src/types/: api.ts
infrastructure/: README.md  alb.tf  ecr.tf  ecs.tf  main.tf  outputs.tf  secrets.tf  terraform.tfvars.example
scripts/: cleanup-aws-resources.sh  production-check.sh
